# pdf-mail-merger

./: .gitignore  Procfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  webpack.config.js
apps/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
apps/account/: admin.py  models.py  urls.py
apps/account/migrations/: 0001_initial.py  0002_alter_account_plan_limit.py
apps/account/views/: account.py  group.py  user.py
apps/common/: models.py  storages.py  views.py
apps/document/: apps.py  models.py  output.py  renderer.py  urls.py  views.py
apps/document/migrations/: 0001_initial.py
apps/page/: views.py
apps/page/templatetags/: add_class.py  group_name.py  settings.py
apps/pdf/: apps.py  models.py  urls.py  views.py
apps/pdf/migrations/: 0001_initial.py
apps/templates/: base.html  dashboard.html
apps/templates/account/: edit.html  upgrade.html
apps/templates/common/: footer.html  message.html  pagination.html  trial.html  upgrade.html
apps/templates/document/: delete.html  detail.html  index.html
apps/templates/group/: detail.html  index.html  new.html
apps/templates/page/: home.html  index.html
apps/templates/pdf/: base.html  editor.html
apps/templates/registration/: login.html  password_reset_form.html
apps/templates/user/: detail.html  index.html  new.html  profile.html  register.html
assets/: app.css  app.js  editor.css  editor.js  styles.css
static/images/: pdf-mail-merger.drawio
